// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Dashboard Header basic 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "minWidth": "1000px",
      }
    }
  >
    <div
      className="dashboard--header"
      data-testid="dashboard-header"
    >
      <div
        className="dashboard--header-left"
      >
        <h2>
          Monthly Building: Munich
        </h2>
        <p>
          Shows an overview of monthly data for a building
        </p>
        <div
          className="dashboard--lastupdated"
        >
          Last updated:
           
          03/31/2019 13:55
        </div>
      </div>
      <div
        className="dashboard--header-right"
      >
        <div
          className="dashboard--header-actions"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Dashboard Header with custom actions 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "1000px",
      }
    }
  >
    <div
      className="dashboard--header"
      data-testid="dashboard-header"
    >
      <div
        className="dashboard--header-left"
      >
        <h2>
          Monthly Building: Munich
        </h2>
        <p>
          Shows an overview of daily data for a building
        </p>
        <div
          className="dashboard--lastupdated"
        >
          Last updated:
           
          03/31/2019 13:55
        </div>
      </div>
      <div
        className="dashboard--header-right"
      >
        <div
          className="dashboard--header-actions"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="bx--btn--icon-only iot--btn bx--btn bx--btn--ghost"
            data-testid="dashboard-header-button-edit"
            disabled={false}
            id="action-icon--edit"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Edit"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Edit"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
              />
            </svg>
          </button>
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="bx--btn--icon-only iot--btn bx--btn bx--btn--ghost"
            data-testid="dashboard-header-button-delete"
            disabled={false}
            id="action-icon--delete"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Delete"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Delete"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 12H14V24H12zM18 12H20V24H18z"
              />
              <path
                d="M4 6V8H6V28a2 2 0 002 2H24a2 2 0 002-2V8h2V6zM8 28V8H24V28zM12 2H20V4H12z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Dashboard Header with custom actions component 1`] = `
<div
  className="storybook-container"
>
  <div
    className="dashboard--header"
    data-testid="dashboard-header"
  >
    <div
      className="dashboard--header-left"
    >
      <h2>
        Monthly Building: Munich
      </h2>
      <p>
        Shows an overview of daily data for a building
      </p>
      <div
        className="dashboard--lastupdated"
      >
        Last updated:
         
        03/31/2019 13:55
      </div>
    </div>
    <div
      className="dashboard--header-right"
    >
      <div
        className="dashboard--header-actions"
      >
        <div>
          we can now send custom components
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Dashboard Header with filter 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "1000px",
      }
    }
  >
    <div
      className="dashboard--header"
      data-testid="dashboard-header"
    >
      <div
        className="dashboard--header-left"
      >
        <h2>
          Monthly Building: Munich
        </h2>
        <p>
          Shows an overview of daily data for a building
        </p>
        <div
          className="dashboard--lastupdated"
        >
          Last updated:
           
          03/31/2019 13:55
        </div>
      </div>
      <div
        className="dashboard--header-right"
      >
        <div
          className="bx--form-item"
        >
          <div
            className="bx--date-picker bx--date-picker--single"
            id="date-picker"
          >
            <div
              className="bx--date-picker-container"
            >
              <label
                className="bx--label"
                htmlFor="date-picker-input-id"
              >
                Select day
              </label>
              <div
                className="bx--date-picker-input__wrapper"
              >
                <input
                  className="bx--date-picker__input"
                  disabled={false}
                  id="date-picker-input-id"
                  onChange={[Function]}
                  onClick={[Function]}
                  pattern="d{1,2}/d{4}"
                  placeholder="mm/dd/yyyy"
                  type="text"
                />
                <svg
                  aria-hidden="true"
                  aria-label="Icon description"
                  className="bx--date-picker__icon"
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                  />
                  <title>
                    Icon description
                  </title>
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          className="dashboard--header-actions"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Dashboard Header with filter and custom actions 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "1000px",
      }
    }
  >
    <div
      className="dashboard--header"
      data-testid="dashboard-header"
    >
      <div
        className="dashboard--header-left"
      >
        <h2>
          Monthly Building: Munich
        </h2>
        <p>
          Shows an overview of daily data for a building
        </p>
        <div
          className="dashboard--lastupdated"
        >
          Last updated:
           
          03/31/2019 13:55
        </div>
      </div>
      <div
        className="dashboard--header-right"
      >
        <div
          className="bx--form-item"
        >
          <div
            className="bx--date-picker bx--date-picker--single"
            id="date-picker"
          >
            <div
              className="bx--date-picker-container"
            >
              <label
                className="bx--label bx--visually-hidden"
                htmlFor="date-picker-input-id"
              >
                Select day
              </label>
              <div
                className="bx--date-picker-input__wrapper"
              >
                <input
                  className="bx--date-picker__input"
                  disabled={false}
                  id="date-picker-input-id"
                  onChange={[Function]}
                  onClick={[Function]}
                  pattern="d{1,2}/d{4}"
                  placeholder="mm/dd/yyyy"
                  type="text"
                />
                <svg
                  aria-hidden="true"
                  aria-label="Icon description"
                  className="bx--date-picker__icon"
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                  />
                  <title>
                    Icon description
                  </title>
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          className="dashboard--header-actions"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="bx--btn--icon-only iot--btn bx--btn bx--btn--ghost"
            data-testid="dashboard-header-button-edit"
            disabled={false}
            id="action-icon--edit"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Edit"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Edit"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
              />
            </svg>
          </button>
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="bx--btn--icon-only iot--btn bx--btn bx--btn--ghost"
            data-testid="dashboard-header-button-delete"
            disabled={false}
            id="action-icon--delete"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Delete"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Delete"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 12H14V24H12zM18 12H20V24H18z"
              />
              <path
                d="M4 6V8H6V28a2 2 0 002 2H24a2 2 0 002-2V8h2V6zM8 28V8H24V28zM12 2H20V4H12z"
              />
            </svg>
          </button>
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="bx--btn--icon-only iot--btn bx--btn bx--btn--ghost"
            data-testid="dashboard-header-button-pin"
            disabled={false}
            id="action-icon--pin"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Pin"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Pin"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28.59,13.31,30,11.9,20,2,18.69,3.42,19.87,4.6,8.38,14.32,6.66,12.61,5.25,14l5.66,5.68L2,28.58,3.41,30l8.91-8.91L18,26.75l1.39-1.42-1.71-1.71L27.4,12.13ZM16.26,22.2,9.8,15.74,21.29,6,26,10.71Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Dashboard Header ️⛔ Deprecation Notice  1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--toast-notification bx--toast-notification--warning"
    kind="warning"
    role="alert"
    style={
      Object {
        "marginBottom": "0.5rem",
        "minWidth": "30rem",
      }
    }
  >
    <svg
      aria-hidden={true}
      className="bx--toast-notification__icon"
      fill="currentColor"
      focusable="false"
      height={20}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10,1c-5,0-9,4-9,9s4,9,9,9s9-4,9-9S15,1,10,1z M9.2,5h1.5v7H9.2V5z M10,16c-0.6,0-1-0.4-1-1s0.4-1,1-1	s1,0.4,1,1S10.6,16,10,16z"
      />
      <path
        d="M9.2,5h1.5v7H9.2V5z M10,16c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1S10.6,16,10,16z"
        data-icon-path="inner-path"
        opacity="0"
      />
      <title>
        warning icon
      </title>
    </svg>
    <div
      className="bx--toast-notification__details"
    >
      <h3
        className="bx--toast-notification__title"
      >
        Deprecation Notice
      </h3>
      <div
        className="bx--toast-notification__subtitle"
      >
        DashboardHeader has been deprecated and will be removed in the next major version of carbon-addons-iot-react.
      </div>
    </div>
  </div>
</div>
`;
